data/derived/comb/progs/unify/prog5950.ml.out
Characters 51-60:
  (h::t) -> helperR t :: h;;
            ^^^^^^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type 'b
       The type variable 'b occurs inside 'a list -> 'b list
